rust/target/debug/build/graph_builder-c41a273eb48ec55d/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /home/mbowditch/Documents/cavity_method/code/rust/target/debug/build/graph_builder-c41a273eb48ec55d/out/probe.rs:2:12
  |
2 | #![feature(maybe_uninit_write_slice)]
  |            ^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /home/mbowditch/Documents/cavity_method/code/rust/target/debug/build/graph_builder-c41a273eb48ec55d/out/probe.rs:2:12
  |
2 | #![feature(new_uninit)]
  |            ^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /home/mbowditch/Documents/cavity_method/code/rust/target/debug/build/graph_builder-c41a273eb48ec55d/out/probe.rs:2:12
  |
2 | #![feature(slice_partition_dedup)]
  |            ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /home/mbowditch/Documents/cavity_method/code/rust/target/debug/build/graph_builder-c41a273eb48ec55d/out/probe.rs:2:1
  |
2 | #![feature(doc_cfg)]
  | ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
